VNH-5 | Predict house price

--- a/src/data/exploration.ipynb
+++ b/src/data/exploration.ipynb
@@ -1742,7 +1742,7 @@
     {
      "data": {
       "text/plain": [
-       "<AxesSubplot: xlabel='price_per_m2', ylabel='Count'>"
+       "<AxesSubplot:xlabel='price_per_m2', ylabel='Count'>"
       ]
      },
      "execution_count": 47,
@@ -1773,7 +1773,7 @@
     {
      "data": {
       "text/plain": [
-       "<AxesSubplot: xlabel='paper_type', ylabel='Count'>"
+       "<AxesSubplot:xlabel='paper_type', ylabel='Count'>"
       ]
      },
      "execution_count": 48,
@@ -1804,7 +1804,7 @@
     {
      "data": {
       "text/plain": [
-       "<AxesSubplot: xlabel='num_floors', ylabel='Count'>"
+       "<AxesSubplot:xlabel='num_floors', ylabel='Count'>"
       ]
      },
      "execution_count": 49,
@@ -1835,7 +1835,7 @@
     {
      "data": {
       "text/plain": [
-       "<AxesSubplot: xlabel='num_rooms', ylabel='Count'>"
+       "<AxesSubplot:xlabel='num_rooms', ylabel='Count'>"
       ]
      },
      "execution_count": 50,
@@ -1866,7 +1866,7 @@
     {
      "data": {
       "text/plain": [
-       "<AxesSubplot: xlabel='squares', ylabel='Count'>"
+       "<AxesSubplot:xlabel='squares', ylabel='Count'>"
       ]
      },
      "execution_count": 51,
@@ -1897,7 +1897,7 @@
     {
      "data": {
       "text/plain": [
-       "<AxesSubplot: xlabel='length', ylabel='Count'>"
+       "<AxesSubplot:xlabel='length', ylabel='Count'>"
       ]
      },
      "execution_count": 52,
@@ -1928,7 +1928,7 @@
     {
      "data": {
       "text/plain": [
-       "<AxesSubplot: xlabel='width', ylabel='Count'>"
+       "<AxesSubplot:xlabel='width', ylabel='Count'>"
       ]
      },
      "execution_count": 53,
@@ -2308,7 +2308,7 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "categories = df.loc[:,df.dtypes==np.object]\n",
+    "categories = df.loc[:,df.dtypes==\"object\"]\n",
     "categories\n"
    ]
   },
@@ -2556,7 +2556,7 @@
        "house_type  house_type         0.036793"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
