VNH-5 | Get processed data

--- a/src/model/predict_price.ipynb
+++ b/src/model/predict_price.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -47,101 +47,95 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>Ngày</th>\n",
-       "      <th>Địa chỉ</th>\n",
-       "      <th>Quận</th>\n",
-       "      <th>Huyện</th>\n",
-       "      <th>Loại hình nhà ở</th>\n",
-       "      <th>Giấy tờ pháp lý</th>\n",
-       "      <th>Số tầng</th>\n",
-       "      <th>Số phòng ngủ</th>\n",
-       "      <th>Diện tích</th>\n",
-       "      <th>Dài</th>\n",
-       "      <th>Rộng</th>\n",
-       "      <th>Giá/m2</th>\n",
+       "      <th>date</th>\n",
+       "      <th>address</th>\n",
+       "      <th>district</th>\n",
+       "      <th>town</th>\n",
+       "      <th>house_type</th>\n",
+       "      <th>paper_type</th>\n",
+       "      <th>num_floors</th>\n",
+       "      <th>num_rooms</th>\n",
+       "      <th>squares</th>\n",
+       "      <th>length</th>\n",
+       "      <th>width</th>\n",
+       "      <th>price_per_m2</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
        "      <td>2020-08-05</td>\n",
        "      <td>Đường Hoàng Quốc Việt, Phường Nghĩa Đô, Quận C...</td>\n",
        "      <td>Quận Cầu Giấy</td>\n",
        "      <td>Phường Nghĩa Đô</td>\n",
        "      <td>Nhà ngõ, hẻm</td>\n",
-       "      <td>Đã có sổ</td>\n",
+       "      <td>1</td>\n",
        "      <td>4</td>\n",
-       "      <td>5 phòng</td>\n",
-       "      <td>46 m²</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>86,96 triệu/m²</td>\n",
+       "      <td>5</td>\n",
+       "      <td>46</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>86.96</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
        "      <td>2020-08-05</td>\n",
        "      <td>Đường Kim Giang, Phường Kim Giang, Quận Thanh ...</td>\n",
        "      <td>Quận Thanh Xuân</td>\n",
        "      <td>Phường Kim Giang</td>\n",
        "      <td>Nhà mặt phố, mặt tiền</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>3 phòng</td>\n",
-       "      <td>37 m²</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>116,22 triệu/m²</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>37</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>116.22</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
        "      <td>2020-08-05</td>\n",
        "      <td>phố minh khai, Phường Minh Khai, Quận Hai Bà T...</td>\n",
        "      <td>Quận Hai Bà Trưng</td>\n",
        "      <td>Phường Minh Khai</td>\n",
        "      <td>Nhà ngõ, hẻm</td>\n",
-       "      <td>Đã có sổ</td>\n",
+       "      <td>1</td>\n",
        "      <td>4</td>\n",
-       "      <td>4 phòng</td>\n",
-       "      <td>40 m²</td>\n",
-       "      <td>10 m</td>\n",
-       "      <td>4 m</td>\n",
-       "      <td>65 triệu/m²</td>\n",
+       "      <td>4</td>\n",
+       "      <td>40</td>\n",
+       "      <td>10</td>\n",
+       "      <td>4</td>\n",
+       "      <td>65.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
        "      <td>2020-08-05</td>\n",
        "      <td>Đường Võng Thị, Phường Thụy Khuê, Quận Tây Hồ,...</td>\n",
        "      <td>Quận Tây Hồ</td>\n",
        "      <td>Phường Thụy Khuê</td>\n",
        "      <td>Nhà ngõ, hẻm</td>\n",
-       "      <td>Đã có sổ</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>6 phòng</td>\n",
-       "      <td>51 m²</td>\n",
-       "      <td>12.75 m</td>\n",
-       "      <td>4 m</td>\n",
-       "      <td>100 triệu/m²</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>51</td>\n",
+       "      <td>12</td>\n",
+       "      <td>4</td>\n",
+       "      <td>100.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
        "      <td>2020-08-05</td>\n",
        "      <td>Đường Kim Giang, Phường Kim Giang, Quận Thanh ...</td>\n",
        "      <td>Quận Thanh Xuân</td>\n",
        "      <td>Phường Kim Giang</td>\n",
        "      <td>Nhà ngõ, hẻm</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>4 phòng</td>\n",
-       "      <td>36 m²</td>\n",
-       "      <td>9 m</td>\n",
-       "      <td>4 m</td>\n",
-       "      <td>86,11 triệu/m²</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>36</td>\n",
+       "      <td>9</td>\n",
+       "      <td>4</td>\n",
+       "      <td>86.11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -157,156 +151,137 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>82491</th>\n",
-       "      <td>82491</td>\n",
+       "      <th>81520</th>\n",
+       "      <td>2019-08-26</td>\n",
+       "      <td>Đường Lê Đức Thọ, Phường Mỹ Đình 1, Quận Nam T...</td>\n",
+       "      <td>Quận Nam Từ Liêm</td>\n",
+       "      <td>Phường Mỹ Đình 1</td>\n",
+       "      <td>Nhà phố liền kề</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>38</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>76.32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>81521</th>\n",
        "      <td>2019-08-23</td>\n",
        "      <td>Đường Hồ Tùng Mậu, Phường Phúc Diễn, Quận Bắc ...</td>\n",
        "      <td>Quận Bắc Từ Liêm</td>\n",
        "      <td>Phường Phúc Diễn</td>\n",
        "      <td>Nhà phố liền kề</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>3 phòng</td>\n",
-       "      <td>38 m²</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>81,58 triệu/m²</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>38</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>81.58</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>82492</th>\n",
-       "      <td>82492</td>\n",
+       "      <th>81522</th>\n",
        "      <td>2019-08-07</td>\n",
        "      <td>Đường Trần Quốc Hoàn, Phường Quan Hoa, Quận Cầ...</td>\n",
        "      <td>Quận Cầu Giấy</td>\n",
        "      <td>Phường Quan Hoa</td>\n",
        "      <td>Nhà mặt phố, mặt tiền</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>3 phòng</td>\n",
-       "      <td>50 m²</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>292 triệu/m²</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>50</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>292.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>82493</th>\n",
-       "      <td>82493</td>\n",
+       "      <th>81523</th>\n",
        "      <td>2019-08-07</td>\n",
        "      <td>Đường Nguyễn Khánh Toàn, Phường Quan Hoa, Quận...</td>\n",
        "      <td>Quận Cầu Giấy</td>\n",
        "      <td>Phường Quan Hoa</td>\n",
        "      <td>Nhà mặt phố, mặt tiền</td>\n",
-       "      <td>Đã có sổ</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>4 phòng</td>\n",
-       "      <td>41 m²</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>341,46 triệu/m²</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>41</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>341.46</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>82494</th>\n",
-       "      <td>82494</td>\n",
+       "      <th>81524</th>\n",
        "      <td>2019-08-05</td>\n",
        "      <td>Đường Quan Hoa, Phường Quan Hoa, Quận Cầu Giấy...</td>\n",
        "      <td>Quận Cầu Giấy</td>\n",
        "      <td>Phường Quan Hoa</td>\n",
        "      <td>Nhà ngõ, hẻm</td>\n",
-       "      <td>Đã có sổ</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>4 phòng</td>\n",
-       "      <td>60 m²</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>101,67 triệu/m²</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>82495</th>\n",
-       "      <td>82495</td>\n",
-       "      <td>2019-08-05</td>\n",
-       "      <td>Đường Hồ Tùng Mậu, Phường Mai Dịch, Quận Cầu G...</td>\n",
-       "      <td>Quận Cầu Giấy</td>\n",
-       "      <td>Phường Mai Dịch</td>\n",
-       "      <td>Nhà phố liền kề</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>4 phòng</td>\n",
-       "      <td>45 m²</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>102,22 triệu/m²</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>60</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>101.67</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>82496 rows × 13 columns</p>\n",
+       "<p>81525 rows × 12 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       Unnamed: 0        Ngày  \\\n",
-       "0               0  2020-08-05   \n",
-       "1               1  2020-08-05   \n",
-       "2               2  2020-08-05   \n",
-       "3               3  2020-08-05   \n",
-       "4               4  2020-08-05   \n",
-       "...           ...         ...   \n",
-       "82491       82491  2019-08-23   \n",
-       "82492       82492  2019-08-07   \n",
-       "82493       82493  2019-08-07   \n",
-       "82494       82494  2019-08-05   \n",
-       "82495       82495  2019-08-05   \n",
+       "             date                                            address  \\\n",
+       "0      2020-08-05  Đường Hoàng Quốc Việt, Phường Nghĩa Đô, Quận C...   \n",
+       "1      2020-08-05  Đường Kim Giang, Phường Kim Giang, Quận Thanh ...   \n",
+       "2      2020-08-05  phố minh khai, Phường Minh Khai, Quận Hai Bà T...   \n",
+       "3      2020-08-05  Đường Võng Thị, Phường Thụy Khuê, Quận Tây Hồ,...   \n",
+       "4      2020-08-05  Đường Kim Giang, Phường Kim Giang, Quận Thanh ...   \n",
+       "...           ...                                                ...   \n",
+       "81520  2019-08-26  Đường Lê Đức Thọ, Phường Mỹ Đình 1, Quận Nam T...   \n",
+       "81521  2019-08-23  Đường Hồ Tùng Mậu, Phường Phúc Diễn, Quận Bắc ...   \n",
+       "81522  2019-08-07  Đường Trần Quốc Hoàn, Phường Quan Hoa, Quận Cầ...   \n",
+       "81523  2019-08-07  Đường Nguyễn Khánh Toàn, Phường Quan Hoa, Quận...   \n",
+       "81524  2019-08-05  Đường Quan Hoa, Phường Quan Hoa, Quận Cầu Giấy...   \n",
        "\n",
-       "                                                 Địa chỉ               Quận  \\\n",
-       "0      Đường Hoàng Quốc Việt, Phường Nghĩa Đô, Quận C...      Quận Cầu Giấy   \n",
-       "1      Đường Kim Giang, Phường Kim Giang, Quận Thanh ...    Quận Thanh Xuân   \n",
-       "2      phố minh khai, Phường Minh Khai, Quận Hai Bà T...  Quận Hai Bà Trưng   \n",
-       "3      Đường Võng Thị, Phường Thụy Khuê, Quận Tây Hồ,...        Quận Tây Hồ   \n",
-       "4      Đường Kim Giang, Phường Kim Giang, Quận Thanh ...    Quận Thanh Xuân   \n",
-       "...                                                  ...                ...   \n",
-       "82491  Đường Hồ Tùng Mậu, Phường Phúc Diễn, Quận Bắc ...   Quận Bắc Từ Liêm   \n",
-       "82492  Đường Trần Quốc Hoàn, Phường Quan Hoa, Quận Cầ...      Quận Cầu Giấy   \n",
-       "82493  Đường Nguyễn Khánh Toàn, Phường Quan Hoa, Quận...      Quận Cầu Giấy   \n",
-       "82494  Đường Quan Hoa, Phường Quan Hoa, Quận Cầu Giấy...      Quận Cầu Giấy   \n",
-       "82495  Đường Hồ Tùng Mậu, Phường Mai Dịch, Quận Cầu G...      Quận Cầu Giấy   \n",
+       "                district              town             house_type  paper_type  \\\n",
+       "0          Quận Cầu Giấy   Phường Nghĩa Đô           Nhà ngõ, hẻm           1   \n",
+       "1        Quận Thanh Xuân  Phường Kim Giang  Nhà mặt phố, mặt tiền           0   \n",
+       "2      Quận Hai Bà Trưng  Phường Minh Khai           Nhà ngõ, hẻm           1   \n",
+       "3            Quận Tây Hồ  Phường Thụy Khuê           Nhà ngõ, hẻm           1   \n",
+       "4        Quận Thanh Xuân  Phường Kim Giang           Nhà ngõ, hẻm           0   \n",
+       "...                  ...               ...                    ...         ...   \n",
+       "81520   Quận Nam Từ Liêm  Phường Mỹ Đình 1        Nhà phố liền kề           1   \n",
+       "81521   Quận Bắc Từ Liêm  Phường Phúc Diễn        Nhà phố liền kề           0   \n",
+       "81522      Quận Cầu Giấy   Phường Quan Hoa  Nhà mặt phố, mặt tiền           0   \n",
+       "81523      Quận Cầu Giấy   Phường Quan Hoa  Nhà mặt phố, mặt tiền           1   \n",
+       "81524      Quận Cầu Giấy   Phường Quan Hoa           Nhà ngõ, hẻm           1   \n",
        "\n",
-       "                  Huyện        Loại hình nhà ở Giấy tờ pháp lý Số tầng  \\\n",
-       "0       Phường Nghĩa Đô           Nhà ngõ, hẻm        Đã có sổ       4   \n",
-       "1      Phường Kim Giang  Nhà mặt phố, mặt tiền             NaN     NaN   \n",
-       "2      Phường Minh Khai           Nhà ngõ, hẻm        Đã có sổ       4   \n",
-       "3      Phường Thụy Khuê           Nhà ngõ, hẻm        Đã có sổ     NaN   \n",
-       "4      Phường Kim Giang           Nhà ngõ, hẻm             NaN     NaN   \n",
-       "...                 ...                    ...             ...     ...   \n",
-       "82491  Phường Phúc Diễn        Nhà phố liền kề             NaN     NaN   \n",
-       "82492   Phường Quan Hoa  Nhà mặt phố, mặt tiền             NaN     NaN   \n",
-       "82493   Phường Quan Hoa  Nhà mặt phố, mặt tiền        Đã có sổ     NaN   \n",
-       "82494   Phường Quan Hoa           Nhà ngõ, hẻm        Đã có sổ     NaN   \n",
-       "82495   Phường Mai Dịch        Nhà phố liền kề             NaN     NaN   \n",
+       "       num_floors  num_rooms  squares  length  width  price_per_m2  \n",
+       "0               4          5       46       0      0         86.96  \n",
+       "1               0          3       37       0      0        116.22  \n",
+       "2               4          4       40      10      4         65.00  \n",
+       "3               0          6       51      12      4        100.00  \n",
+       "4               0          4       36       9      4         86.11  \n",
+       "...           ...        ...      ...     ...    ...           ...  \n",
+       "81520           0          3       38       0      0         76.32  \n",
+       "81521           0          3       38       0      0         81.58  \n",
+       "81522           0          3       50       0      0        292.00  \n",
+       "81523           0          4       41       0      0        341.46  \n",
+       "81524           0          4       60       0      0        101.67  \n",
        "\n",
-       "      Số phòng ngủ Diện tích      Dài Rộng           Giá/m2  \n",
-       "0          5 phòng     46 m²      NaN  NaN   86,96 triệu/m²  \n",
-       "1          3 phòng     37 m²      NaN  NaN  116,22 triệu/m²  \n",
-       "2          4 phòng     40 m²     10 m  4 m      65 triệu/m²  \n",
-       "3          6 phòng     51 m²  12.75 m  4 m     100 triệu/m²  \n",
-       "4          4 phòng     36 m²      9 m  4 m   86,11 triệu/m²  \n",
-       "...            ...       ...      ...  ...              ...  \n",
-       "82491      3 phòng     38 m²      NaN  NaN   81,58 triệu/m²  \n",
-       "82492      3 phòng     50 m²      NaN  NaN     292 triệu/m²  \n",
-       "82493      4 phòng     41 m²      NaN  NaN  341,46 triệu/m²  \n",
-       "82494      4 phòng     60 m²      NaN  NaN  101,67 triệu/m²  \n",
-       "82495      4 phòng     45 m²      NaN  NaN  102,22 triệu/m²  \n",
-       "\n",
-       "[82496 rows x 13 columns]"
+       "[81525 rows x 12 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(\"../data/raw/VN_housing_dataset.csv\")\n",
+    "df = pd.read_csv(\"../../data/processed/VN_housing_dataset.csv\")\n",
     "df"
    ]
   },
